loading spinner added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </section>
         <!-- search reasult -->
         <section>
-            <!-- add spiner or loader untill data are load -->
-             <div class="text-center my-40 hidden">
+            <!-- add spinner or loader untill data are load -->
+             <div id="loading-spinner" class="text-center my-40 hidden">
                 <span class="loading loading-dots text-red-500 loading-lg"></span>
              </div>
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
