added show all button full functionalities

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </div> -->
             </div>
             <!-- show all element button -->
-             <div id="show-all-container" class="hidden mt-5">
-                <button class="btn btn-accent">Show All Phones</button>
+             <div id="show-all-container" class="hidden text-center my-5">
+                <button onclick="handleShowAll()" class="btn btn-accent">Show All Phones</button>
              </div>
         </section>
     </main>
